--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
-  "name": "storybook-sample",
+  "name": "fix-storybook-types",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "storybook": "start-storybook -p 9001 -c .storybook"
+    "storybook": "start-storybook -p 9001"
   },
   "author": "do7be",
   "license": "ISC",
   "devDependencies": {
-    "@storybook/react": "^3.4.11",
-    "babel-core": "^6.26.3"
+    "@babel/core": "^7.1.2",
+    "@emotion/core": "^0.13.1",
+    "@storybook/addon-actions": "^3.4.11",
+    "@storybook/addons": "^3.4.11",
+    "@storybook/react": "4.0.0-alpha.24",
+    "@types/react": "^16.4.15",
+    "@types/react-dom": "^16.0.8",
+    "@types/storybook__addon-actions": "^3.4.1",
+    "@types/storybook__react": "^3.0.9",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.4",
+    "typescript": "^3.1.1",
+    "webpack": "^4.20.2"
   },
   "dependencies": {
     "react": "^16.5.2",
