--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@babel/core": "^7.1.2",
     "@emotion/core": "^0.13.1",
     "@storybook/addon-actions": "^3.4.11",
-    "@storybook/addons": "^3.4.11",
+    "@storybook/addon-notes": "^3.4.11",
     "@storybook/react": "4.0.0-alpha.24",
     "@types/react": "^16.4.15",
     "@types/react-dom": "^16.0.8",
     "@types/storybook__addon-actions": "^3.4.1",
+    "@types/storybook__addon-notes": "^3.3.3",
     "@types/storybook__react": "^3.0.9",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.4",
