--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fix-storybook-types",
+  "name": "try-storybook",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
