--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@emotion/core": "^0.13.1",
-    "@storybook/addon-actions": "^3.4.11",
-    "@storybook/addon-notes": "^3.4.11",
+    "@storybook/addon-actions": "^4.0.0-alpha.24",
+    "@storybook/addon-notes": "^4.0.0-alpha.24",
     "@storybook/react": "4.0.0-alpha.24",
     "@types/react": "^16.4.15",
     "@types/react-dom": "^16.0.8",
